--- a/stylesheets/scss/about.scss
+++ b/stylesheets/scss/about.scss
@@ -31,22 +31,18 @@
   margin: 0;
   padding: 25px;
   list-style: none;
-  background-color: $aqua;
+  background-color: $lightblue;
 }
 
 h2.short-title {
   padding-bottom: 10px;
-  color: $darkgray;
-}
-
-.short ul {
-  padding-left: 1rem;
+  color: $darkblue;
 }
 
 .short ul li {
-  margin-top: 10px;
-  padding-left: .25rem;
-  padding-bottom: 10px;
-  list-style-position: outside;
-  color: $darkgray;
+  margin-top: 1rem;
+  padding-left: 1rem;
+  color: $darkblue;
+  list-style: none;
+  border-left: 2px solid $lesslightblue;
 }
