--- a/stylesheets/scss/homepage.scss
+++ b/stylesheets/scss/homepage.scss
@@ -4,20 +4,20 @@
   width: 100%;
   max-width: 800px;
   height: auto;
-  background-color: $darkgray;
+  background-color: $verydarkblue;
 }
 
 .close-intro {
   float: right;
   padding: 10px 30px 20px 20px;
-  color: $white;
+  color: white;
   font: 4rem $font-stack;
   font-weight: 300;
   cursor: pointer;
 }
 
 .close-intro:hover {
-  color: $lightgreen;
+  color: $lightblue;
 }
 
 .highlight {
@@ -25,19 +25,19 @@
   padding: 40px;
   font-size: 2rem;
   line-height: 1.6;
-  color: $white;
+  color: white;
+  a {
+    font-weight: 300;
+    color: $blue;
+    &:hover {
+      color: white;
+      background: $blue;
+      text-decoration: none;
+    }
+  }
   @include media(small) {
     padding: 20px;
   }
-}
-
-.highlight a {
-  color: $aqua;
-}
-
-.highlight a:hover {
-  color: $darkblue;
-  text-decoration: none;
 }
 
 @include media(small) {
