--- a/stylesheets/scss/print.scss
+++ b/stylesheets/scss/print.scss
@@ -4,7 +4,7 @@
 
   * {
     background: transparent !important;
-    color: $darkgray !important;
+    color: $verydarkblue !important;
     box-shadow: none !important;
     text-shadow: none !important;
   }
@@ -28,7 +28,7 @@
   }
 
   pre, blockquote {
-    border: 1px solid $lightgray;
+    border: 1px solid $lightblue;
     page-break-inside: avoid;
   }
 
