--- a/stylesheets/scss/variables.scss
+++ b/stylesheets/scss/variables.scss
@@ -2,15 +2,15 @@ $font-stack: 'Source Sans Pro', sans-serif;
 
 // palette
 
-$darkgreen: #46ce40;
-$lightgreen: #95f691;
-$darkblue: #533fea;
-$lightblue: #8f80ff;
-$darkgray: #221e3C;
-$gray: #aca9C2;
-$lightgray: #f2f1fa;
-$white: #fff;
-$aqua: #87ffe3;
+$green: #95f691;
+$darkgreen: darken($green, 20%);
+$verydarkgreen: darken($green, 40%);
+
+$blue: #8f80ff;
+$lightblue: lighten($blue, 20%);
+$lesslightblue: lighten($blue, 15%);
+$darkblue: darken($blue, 50%);
+$verydarkblue: darken($blue, 65%);
 
 //media queries
 
