add text animation, side projects

--- a/stylesheets/scss/about.scss
+++ b/stylesheets/scss/about.scss
@@ -31,7 +31,7 @@
   margin: 0;
   padding: 25px;
   list-style: none;
-  background-color: $lightblue;
+  border: 1px solid $lightblue;
 }
 
 h2.short-title {
