--- a/stylesheets/scss/global.scss
+++ b/stylesheets/scss/global.scss
@@ -76,6 +76,12 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
   line-height: 1.2;
   color: $darkblue;
+  animation: textColor 2s 1;
+}
+
+@keyframes textColor {
+  0% { color: $green; }
+  100% { color: $darkblue }
 }
 
 h1 {
