--- a/stylesheets/scss/about.scss
+++ b/stylesheets/scss/about.scss
@@ -34,15 +34,13 @@
   border: 1px solid $lightblue;
 }
 
-h2.short-title {
+.short-title {
   padding-bottom: 10px;
-  color: $darkblue;
 }
 
 .short ul li {
   margin-top: 1rem;
   padding-left: 1rem;
-  color: $darkblue;
   list-style: none;
   border-left: 2px solid $lesslightblue;
 }
